--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,26 @@
 *.exe
 *.out
 *.app
+*.ncb
+*.sdf
+*.opensdf
+*.suo
+*.idb
+*.pdb
+*.user
+*.obj
+*.orig
+*.vcproj
+*.vcproj.vspscc
+*.vcxproj.vspscc
+*.mode1v3
+
+Debug/
+Release/
+Public/
+debug/
+release/
+public/
+Resources/
+Logs/
+JSONCPP/
